docs: optimized few-shot classification doc

--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -23,14 +23,8 @@
     "    \n",
     "    4.3. [Predict using CLI](#4.3-Predict-using-CLI)\n",
     "\n",
-    "5. [Customize the model](#5.-Customize-the-model)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "5. [Customize the model](#5.-Customize-the-model)\n",
+    "\n",
     "# 1. Introduction to the task\n",
     "\n",
     "__Text classification__ is a task of identifying one of the pre-defined label given an utterance, where label is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n",
@@ -76,14 +70,8 @@
     "`few_shot_roberta` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "Some of few-shot classification models with their config names can be found in the [table](#3.-Models-list)."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Some of few-shot classification models with their config names can be found in the [table](#3.-Models-list).\n",
+    "\n",
     "# 3. Models list\n",
     "\n",
     "At the moment, only `few_shot_roberta` config support out-of-scope detection.\n",
@@ -223,14 +211,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with all other files needed to run the model. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with all other files needed to run the model.\n",
+    "\n",
     "Or make predictions for samples from *stdin*."
    ]
   },
@@ -267,33 +249,16 @@
     }
    ],
    "source": [
+    "from deeppavlov import build_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
     "model_config = parse_config('few_shot_roberta')\n",
-    "\n",
-    "print(model_config['chainer']['pipe'][-1]['confidence_threshold'])"
+    "model_config['chainer']['pipe'][-1]['confidence_threshold'] = 0.1\n",
+    "model = build_model(model_config)"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "dnnc_cuda11_env",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
