--- a/docs/features/models/KBQA.ipynb
+++ b/docs/features/models/KBQA.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### Knowledge Base Question Answering (KBQA)\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nastyachizhikova/doc_test/blob/main/source/notebooks/KBQA.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1P3mN6Y2MJQaniT-9klqxzZA2OOqX7H8r?usp=sharing)\n",
     "\n",
     "# Table of contents \n",
     "\n",
@@ -100,10 +100,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`kbqa_cq_en` and `kbqa_cq_rus` here are the names of the model's *config_files*. [What is a Config File?](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Config%20File.html) \n",
+    "`kbqa_cq_en` and `kbqa_cq_rus` here are the names of the model's *config_files*. [What is a Config File?](https://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of KBQA models with their config names can be found in the [table](#5.-Models-list).\n",
+    "The full list of KBQA models with their config names can be found in the [table](#3.-Models-list).\n",
     "\n",
     "# 3. Models list\n",
     "\n",
@@ -672,7 +672,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 1
 }
