--- a/docs/features/models/spelling_correction.ipynb
+++ b/docs/features/models/spelling_correction.ipynb
@@ -95,9 +95,9 @@
     "\n",
     "We provide two types of pipelines for spelling correction:\n",
     "\n",
-    "* [levenshtein_corrector](#Levenshtein-corrector) uses simple Damerau-Levenshtein distance to find correction candidates\n",
+    "* [levenshtein_corrector](#4.1.1-Levenshtein-corrector) uses simple Damerau-Levenshtein distance to find correction candidates\n",
     "\n",
-    "* [brillmoore](#Brillmoore) uses statistics based error model for it.\n",
+    "* [brillmoore](#4.1.2-Brillmoore) uses statistics based error model for it.\n",
     "\n",
     "In both cases correction candidates are chosen based on context with the help of a [kenlm language model](https://docs.deeppavlov.ai/en/master/features/models/spelling_correction.html#language-model).\n",
     "\n",
@@ -314,7 +314,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
