add google colab links

--- a/docs/features/models/entity_extraction.ipynb
+++ b/docs/features/models/entity_extraction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "#### Entity Extraction\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/14agwnnw6Yl49jnG-xXmDsqK8D_BhYE9y?usp=sharing)\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
