--- a/docs/features/models/spelling_correction.ipynb
+++ b/docs/features/models/spelling_correction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "#### Spelling correction\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1Dhty6Cnq62SY3SGI3rqq1qQpmVOs8CAK?usp=sharing)\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
