refactor odqa docs

--- a/docs/features/models/ODQA.ipynb
+++ b/docs/features/models/ODQA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ODQA\n",
+    "#### Open Domain Question Answering (ODQA)\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/17YSODZlGGsLB8OtnK6gDH5OYjgxvKCRX?usp=sharing)\n",
     "\n",
@@ -67,7 +67,7 @@
    "source": [
     "The example below is given for basic ODQA config [en_odqa_infer_wiki](https://github.com/deeppavlov/DeepPavlov/blob/1.1.1/deeppavlov/configs/odqa/en_odqa_infer_wiki.json).\n",
     "Check what [other ODQA configs](#3.-Models-list) are available and simply replace `en_odqa_infer_wiki`\n",
-    "with the config name of your preference.\n",
+    "with the config name of your preference. [What is a Config File?](https://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Before using the model make sure that all required packages are installed running the command:"
    ]
