--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('squad_bert', download=True)"
+    "model = build_model('squad_bert', download=True, install=True)"
    ]
   },
   {
