fix: minor_fixes

--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### Relation Extraction\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/19QN7CLoPugLzVKg0YNIATSfwCVX6mzni?usp=sharing)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/relation_extraction.ipynb)\n",
     "\n",
     "# Table of contents \n",
     "\n",
@@ -95,7 +95,7 @@
     "| relation_extraction/re_docred.json | En | [DocRED](https://www.aclweb.org/anthology/P19-1074/) |\n",
     "| relation_extraction/re_rured.json | Ru | [RuRED](http://www.dialog-21.ru/media/5093/gordeevdiplusetal-031.pdf) |\n",
     "\n",
-    "#### Some details on DocRED corpus English RE model was trained on\n",
+    "## Some details on DocRED corpus English RE model was trained on\n",
     "\n",
     "The English RE model was trained on DocRED English corpus. It was constructed from Wikipedia and Wikidata and is now the largest human-annotated dataset for document-level RE from plain text.\n",
     "\n",
@@ -122,7 +122,7 @@
     "| :---: | :---: | :---: | :---: | :---: | :---: |\n",
     "| 44823          | 89214          | 1239           | 1229           | 1043           | 1036           |\n",
     "\n",
-    "#### Some details on RuRED corpus Russian RE model was trained on\n",
+    "## Some details on RuRED corpus Russian RE model was trained on\n",
     "\n",
     "In case of RuRED we used the train, dev and test sets from the original RuRED setting. We additionally generate negative samples if it was necessary to have the following proportions:\n",
     "\n",
@@ -542,55 +542,37 @@
     "| :--- | :--- | :--- |\n",
     "| MEMBER                     | P710              | участник                        |\n",
     "| WORKS_AS                   | P106              | род занятий                     |\n",
-    "| WORKPLACE                  |                   |                                 |\n",
+    "| WORKPLACE                  | --                | --                              |\n",
     "| OWNERSHIP                  | P1830             | владеет                         |\n",
-    "| SUBORDINATE_OF             | -                 | -                               |\n",
+    "| SUBORDINATE_OF             | --                | --                              |\n",
     "| TAKES_PLACE_IN             | P276              | местонахождение                 |\n",
     "| EVENT_TAKES_PART_IN        | P1344             | участвовал в                    |\n",
-    "| SELLS_TO                   | -                 | -                               |\n",
-    "| ALTERNATIVE_NAME           | -                 | -                               |\n",
+    "| SELLS_TO                   | --                | --                              |\n",
+    "| ALTERNATIVE_NAME           | --                | --                              |\n",
     "| HEADQUARTERED_IN           | P159              | расположение штаб-квартиры      |\n",
     "| PRODUCES                   | P1056             | продукция                       |\n",
-    "| ABBREVIATION               | -                 | -                               |\n",
+    "| ABBREVIATION               | --                | --                              |\n",
     "| DATE_DEFUNCT_IN            | P576              | дата прекращения существования  |\n",
     "| SUBEVENT_OF                | P361              | часть от                        |\n",
     "| DATE_FOUNDED_IN            | P571              | дата основания/создания/возн-я  |\n",
     "| DATE_TAKES_PLACE_ON        | P585              | момент времени                  |\n",
-    "| NUMBER_OF_EMPLOYEES_FIRED  | -                 | -                               |\n",
+    "| NUMBER_OF_EMPLOYEES_FIRED  | --                | --                              |\n",
     "| ORIGINS_FROM               | P495              | страна происхождения            |\n",
-    "| ACQUINTANCE_OF             | -                 | -                               |\n",
+    "| ACQUINTANCE_OF             | --                | --                              |\n",
     "| PARENT_OF                  | P40               | дети                            |\n",
     "| ORGANIZES                  | P664              | организатор                     |\n",
     "| FOUNDED_BY                 | P112              | основатель                      |\n",
     "| PLACE_RESIDES_IN           | P551              | место жительства                |\n",
     "| BORN_IN                    | P19               | место рождения                  |\n",
-    "| AGE_IS                     | -                 | -                               |\n",
-    "| RELATIVE                   | -                 | -                               |\n",
+    "| AGE_IS                     | --                | --                              |\n",
+    "| RELATIVE                   | --                | --                              |\n",
     "| NUMBER_OF_EMPLOYEES        | P1128             | число сотрудников               |\n",
     "| SIBLING                    | P3373             | брат/сестра                     |\n",
     "| DATE_OF_BIRTH              | P569              | дата рождения                   |"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 4
 }
