--- a/docs/features/models/spelling_correction.ipynb
+++ b/docs/features/models/spelling_correction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### Spelling correction\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1Dhty6Cnq62SY3SGI3rqq1qQpmVOs8CAK?usp=sharing)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/spelling_correction.ipynb)\n",
     "\n",
     "# Table of contents \n",
     "\n",
@@ -302,39 +302,14 @@
     "| Correction method | Precision | Recall | F-measure | Speed (sentences/s) |\n",
     "| :---------------- | --------- | ------ | --------- | ------------------- |\n",
     "| Yandex.Speller | 83.09 | 59.86 | 69.59 | 5. |\n",
-    "| :config:`Damerau Levenshtein 1 + lm<spelling_correction/levenshtein_corrector_ru.json>` | 59.38 | 53.44 | 56.25 | 39.3 |\n",
+    "| DeepPavlov levenshtein_corrector_ru | 59.38 | 53.44 | 56.25 | 39.3 |\n",
     "| Hunspell + lm | 41.03 | 48.89 | 44.61 | 2.1 |\n",
     "| JamSpell | 44.57 | 35.69 | 39.64 | 136.2 |\n",
     "| Hunspell | 30.30 | 34.02 | 32.06 | 20.3 |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 4
 }
