docs: models usage examples in quickstart

--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov install ner_ontonotes_bert_torch"
+    "!python -m deeppavlov install ner_ontonotes_bert"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ner_ontonotes_bert_torch` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`ner_ontonotes_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of NER models with their config names can be found in the [table](#6.-Models-list).\n",
@@ -171,7 +171,7 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "ner_model = build_model('ner_ontonotes_bert_torch', download=True, install=True)"
+    "ner_model = build_model('ner_ontonotes_bert', download=True, install=True)"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -m deeppavlov interact ner_ontonotes_bert_torch -d"
+    "! python -m deeppavlov interact ner_ontonotes_bert -d"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -m deeppavlov predict ner_ontonotes_bert_torch -f <file-name>"
+    "! python -m deeppavlov predict ner_ontonotes_bert -f <file-name>"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model('ner_ontonotes_bert_torch', download=True)"
+    "model = evaluate_model('ner_ontonotes_bert', download=True)"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -m deeppavlov evaluate ner_ontonotes_bert_torch"
+    "! python -m deeppavlov evaluate ner_ontonotes_bert"
    ]
   },
   {
@@ -361,7 +361,7 @@
     "from deeppavlov import train_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config('ner_ontonotes_bert_torch')\n",
+    "model_config = parse_config('ner_ontonotes_bert')\n",
     "\n",
     "# dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -m deeppavlov train ner_ontonotes_bert_torch"
+    "! python -m deeppavlov train ner_ontonotes_bert"
    ]
   },
   {
