--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -22,19 +22,19 @@
     "\n",
     "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "\n",
-    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
+    "    4.2. [Predict using CLI](#4.2-Evaluate-from-CLI)\n",
     "\n",
-    "5. [Evaluation](#5.-Evaluation)\n",
+    "5. [Evaluation](#5.-Customize-the-model)\n",
     "\n",
-    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
+    "    5.1. [from Python](#5.1-train-your-model-from-python)\n",
     "\n",
-    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
+    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
     "\n",
-    "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
+    "6. [Train the model on your data]\n",
     "\n",
-    "    6.1. [from Python](#6.1-Train-your-model-from-Python)\n",
+    "    6.1. [from Python]\n",
     "\n",
-    "    6.2. [from CLI](#6.2-Train-your-model-from-CLI)\n",
+    "    6.2. [from CLI]\n",
     "\n",
     "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
     "\n",
@@ -236,7 +236,7 @@
    "source": [
     "# 5. Customize the model\n",
     "\n",
-    "## 5.1 Train your model from Python\n",
+    "## 5.1 train your model from python\n",
     "\n",
     "### Provide your data path\n",
     "\n",
