--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "    4.2. [Predict using Python](#4.2-Predict-using-Python)\n",
     "    \n",
-    "    4.3. [Predict using CLI](#4.3-Predict-using-CLI)\n",
+    "    4.3. [Predict using CLI]\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "\n",
@@ -119,7 +119,7 @@
     "\n",
     "## 4.2 Predict using Python\n",
     "\n",
-    "After [installing](#4.-Get-started-with-the-model) the model, build it from the config and predict."
+    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
   {
