--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "    4.1 [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
-    "    4.2 [Predict using CLI](#4.2-Predict-using-CLI)\n",
+    "    4.2 [Predict using CLI]\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "    \n",
@@ -198,7 +198,7 @@
     "|NUM    | Percents, money, quantities                                                                    |\n",
     "|MISC   | Products, including vehicles, weapons, etc. <br> Events, including elections, battles, sporting MISC events, etc. Laws, cases, languages, etc.   |\n",
     "\n",
-    "**Model Output**: one or several of the [97 relations](#5.1-Relations-used-in-English-model) found between the given entities; relation id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P26') and relation name ('spouse').\n",
+    "**Model Output**: one or several of the [97 relations](#6.1-Relations-used-in-English-model) found between the given entities; relation id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P26') and relation name ('spouse').\n",
     "\n",
     "### Russian"
    ]
@@ -244,7 +244,7 @@
     "- list of entities positions (i.e. all start and end positions of both entities' mentions)\n",
     "- list of NER tags of both entities.\n",
     "\n",
-    "**Model Output**: one or several of the [30 relations](#5.2-Relations-used-in-Russian-model) found between the given entities; a Russian relation name (e.g. \"участник\") or an English one, if Russian one is unavailable, and, if applicable, its id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P710').\n",
+    "**Model Output**: one or several of the [30 relations](#6.2-Relations-used-in-Russian-model) found between the given entities; a Russian relation name (e.g. \"участник\") or an English one, if Russian one is unavailable, and, if applicable, its id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P710').\n",
     "\n",
     "# 5. Customize the model\n",
     "\n",
