refactor: fixes in documentation and small improvements

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -22,19 +22,19 @@
     "\n",
     "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "\n",
-    "    4.2. [Predict using CLI](#4.2-Evaluate-from-CLI)\n",
+    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "5. [Evaluation](#5.-Customize-the-model)\n",
+    "5. [Evaluation](#5.-Evaluation)\n",
     "\n",
-    "    5.1. [from Python](#5.1-train-your-model-from-python)\n",
+    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
     "\n",
-    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
+    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
     "\n",
-    "6. [Train the model on your data]\n",
+    "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
     "\n",
-    "    6.1. [from Python]\n",
+    "    6.1. [from Python](#6.1-Train-your-model-from-Python)\n",
     "\n",
-    "    6.2. [from CLI]\n",
+    "    6.2. [from CLI](#6.2-Train-your-model-from-CLI)\n",
     "\n",
     "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
     "\n",
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Predict using CLI\n",
+    "## 4.2 Predict using CLI\n",
     "\n",
     "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
@@ -198,9 +198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Evaluation\n",
+    "# 5. Evaluation\n",
     "\n",
-    "## 4.1 Evaluate from Python"
+    "## 5.1 Evaluate from Python"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Evaluate from CLI"
+    "## 5.2 Evaluate from CLI"
    ]
   },
   {
@@ -234,9 +234,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Customize the model\n",
+    "# 6. Train the model on your data\n",
     "\n",
-    "## 5.1 train your model from python\n",
+    "## 6.1 Train your model from Python\n",
     "\n",
     "### Provide your data path\n",
     "\n",
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Train your model from CLI\n",
+    "## 6.2 Train your model from CLI\n",
     "\n",
     "To train the model on your data, create a copy of a config file and change the *data_path* variable in it. After that, train the model using your new *config_file*. You can also change any of the hyperparameters of the model."
    ]
