--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "    4.2. [Predict using Python](#4.2-Predict-using-Python)\n",
     "    \n",
-    "    4.3. [Predict using CLI]\n",
+    "    4.3. [Predict using CLI](#4.3-Predict-using-CLI)\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "\n",
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI\n",
+    "## 4.3 Predict using CLI\n",
     "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
