docs: edit kbqa section names

--- a/docs/features/models/KBQA.ipynb
+++ b/docs/features/models/KBQA.ipynb
@@ -26,9 +26,9 @@
     "     \n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "    \n",
-    "    5.1. [Train your model from Python](#5.1-Description-of-config-parameters)\n",
+    "    5.1. [Description of config parameters](#5.1-Description-of-config-parameters)\n",
     "    \n",
-    "    5.2. [Train your model from CLI](#5.2-Train-KBQA-components)\n",
+    "    5.2. [Train KBQA components](#5.2-Train-KBQA-components)\n",
     "\n",
     "# 1. Introduction to the task\n",
     "\n",
