fix: relation extraction documentation page

--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -246,6 +246,32 @@
     "\n",
     "**Model Output**: one or several of the [30 relations](#6.2-Relations-used-in-Russian-model) found between the given entities; a Russian relation name (e.g. \"участник\") or an English one, if Russian one is unavailable, and, if applicable, its id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P710').\n",
     "\n",
+    "## 4.2 Predict using CLI\n",
+    "\n",
+    "You can also get predictions in an interactive mode through CLI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python -m deeppavlov interact re_docred [-d]\n",
+    "! python -m deeppavlov interact re_rured [-d]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). It is used to download the pre-trained model along with embeddings and all other files needed to run the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 5. Customize the model\n",
     "\n",
     "## 5.1 Description of config parameters\n",
